src/parse/snapshots/albronze__parse__literal__tests__float_literals_combo-9.snap
---
source: src/parse/literal.rs
description: ""
info: 1.1e5asd
---
Ok(
    Float {
        significand: "1",
        fraction: "1",
        exponent: "5",
        suffix: "asd",
        radix: Decimal,
    },
)
